--- a/build.yaml
+++ b/build.yaml
@@ -45,8 +45,6 @@ CopyPaths:
   - en-US
   - DSCResources
   - Modules
-Prefix: prefix.ps1
-Suffix: suffix.ps1
 Encoding: UTF8
 VersionedOutputDirectory: true
 BuiltModuleSubdirectory: builtModule
@@ -163,7 +161,7 @@ DscResource.DocGenerator:
       - '\*(.+?)\*' # Match Italic (asterisk)
   Publish_GitHub_Wiki_Content:
     Debug: false
-  Generate_Wiki_Content:
+  Generate_Markdown_For_DSC_Resources:
     MofResourceMetadata:
       Type: MofResource
       Category: Resources
